--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "file-saver": "^2.0.5",
     "solid-icons": "^1.1.0",
     "solid-js": "^1.9.5",
-    "unocss": "^66.1.3",
-    "vite-template-solid": "file:"
+    "unocss": "^66.1.3"
   }
 }
