--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^22.15.29",
     "@unocss/preset-mini": "^66.0.0",
     "@unocss/vite": "^66.0.0",
+    "solid-devtools": "^0.34.3",
     "typescript": "^5.7.2",
     "vite": "^6.0.0",
     "vite-plugin-solid": "^2.11.6"
